[package]
name = "sov-ibc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
derive_more = { workspace = true }
prost = { version = "0.12", default-features = false }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
uint = "0.9"

ibc = { workspace = true }
ibc-proto = { workspace = true }

tendermint = { workspace = true }
tendermint-proto = { workspace = true }

sov-bank = { workspace = true }
sov-chain-state = { workspace = true }
sov-modules-api = { workspace = true }
sov-modules-macros = { workspace = true }
sov-state = { workspace = true }
sov-rollup-interface = { workspace = true }

[dev-dependencies]
basecoin-app = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "7eaf3a7" }
basecoin-store = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "7eaf3a7" }
tendermint-testgen = { workspace = true }
tokio = { workspace = true }
tower-abci = "0.10"
tower = { version = "0.4", features = ["full"] }
tempfile = { workspace = true }

[features]
default = ["native"]
serde = ["dep:serde", "dep:serde_json"]
native = ["serde", "sov-modules-api/native", "schemars"]