[package]
name = "sov-ibc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
derive_more = { workspace = true }
prost = { version = "0.11", default-features = false }
jsonrpsee = { version = "0.18.2", features = ["jsonrpsee-types", "macros", "client-core", "server"], optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
uint = "0.9"

ibc = { workspace = true }
ibc-query = { workspace = true }

tendermint = { workspace = true }
tendermint-proto = { workspace = true }

sov-bank = { workspace = true }
sov-chain-state = { workspace = true }
sov-modules-api = { workspace = true }
sov-modules-macros = { workspace = true }
sov-state = { workspace = true }
sov-rollup-interface = { workspace = true }

[dev-dependencies]
basecoin-app = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "5f39639" }
basecoin-store = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "5f39639" }

tendermint-testgen = { workspace = true }
tokio = { workspace = true }
tower-abci = "0.10"
tower = { version = "0.4", features = ["full"] }
tempfile = { workspace = true }

[features]
default = ["native"]
serde = ["dep:serde", "dep:serde_json"]
native = ["serde", "sov-bank/native", "sov-chain-state/native", "sov-modules-api/native", "sov-state/native", "schemars", "jsonrpsee"]