[package]
name = "sov-ibc-transfer"
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
publish      = false
readme       = "./../README.md"

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow     = { workspace = true }
base64     = { workspace = true }
borsh      = { workspace = true }
jsonrpsee  = { workspace = true, optional = true }
prost      = { workspace = true }
schemars   = { workspace = true, optional = true }
serde      = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror  = { workspace = true }
uint       = "0.9"

# ibc dependencies
ibc-app-transfer = { workspace = true, features = ["borsh", "schema"] }
ibc-core         = { workspace = true }

# sovereign dependencies
sov-bank             = { workspace = true }
sov-modules-api      = { workspace = true }
sov-rollup-interface = { workspace = true }

[features]
default = []
serde = ["serde_json"]
native = [
    "serde",
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "schemars",
    "jsonrpsee",
]
