[package]
name = "sov-ibc-transfer"
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
readme       = "./../README.md"
publish      = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow      = { workspace = true }
borsh       = { workspace = true }
derive_more = { workspace = true }
jsonrpsee   = { workspace = true, optional = true }
prost       = { workspace = true }
schemars    = { workspace = true, optional = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
uint        = "0.9"

# ibc dependencies
ibc-app-transfer = { workspace = true, features = ["borsh", "schema"] }
ibc-core         = { workspace = true }

# sovereign dependencies
sov-bank             = { workspace = true }
sov-modules-api      = { workspace = true }
sov-rollup-interface = { workspace = true }

[features]
default = []
native = [
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "schemars",
    "jsonrpsee",
]
