[package]
name = "sov-ibc"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
# external dependencies
anyhow = { workspace = true }
borsh = { workspace = true }
derive_more = { workspace = true }
prost = { version = "0.11", default-features = false }
jsonrpsee = { version = "0.18.2", features = [
    "jsonrpsee-types",
    "macros",
    "client-core",
    "server",
], optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

# internal dependencies
sov-ibc-transfer = { path = "../sov-ibc-transfer" }

# ibc dependencies
ibc = { workspace = true }
ibc-query = { workspace = true }
# `tendermint` required to convert IbcEvent to a domain event type without custom conversion.
tendermint = { workspace = true }

# sovereign dependencies
sov-chain-state = { workspace = true }
sov-modules-api = { workspace = true }
sov-modules-macros = { workspace = true }
sov-state = { workspace = true }
sov-rollup-interface = { workspace = true }

[features]
default = []
native = [
    "dep:serde_json",
    "sov-chain-state/native",
    "sov-ibc-transfer/native",
    "sov-modules-api/native",
    "sov-state/native",
    "schemars",
    "jsonrpsee",
]
