[package]
name = "sov-ibc"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
readme       = "README.md"
publish      = false

[dependencies]
# external dependencies
anyhow      = { workspace = true }
base64      = { workspace = true }
borsh       = { workspace = true }
derive_more = { workspace = true }
jsonrpsee   = { workspace = true, optional = true }
prost       = { workspace = true }
schemars    = { workspace = true, optional = true }
sha2        = { version = "0.10.8", default-features = false }
serde       = { workspace = true }
serde_json  = { workspace = true, optional = true }
thiserror   = { workspace = true }

# internal dependencies
sov-ibc-transfer = { path = "../sov-ibc-transfer" }

# ibc dependencies
ibc-core              = { workspace = true }
ibc-app-transfer      = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-query             = { workspace = true, optional = true }
sov-celestia-client   = { path = "../../clients/sov-celestia" }

# enforce version so that Risc0 compiles
ahash = "=0.8.6"
time = "=0.3.29"

# sovereign dependencies
sov-chain-state      = { workspace = true }
sov-modules-api      = { workspace = true }
sov-state            = { workspace = true }
sov-rollup-interface = { workspace = true }

[features]
default = []
serde = ["serde_json"]
native = [
    "serde",
    "sov-chain-state/native",
    "sov-ibc-transfer/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "sov-state/native",
    "schemars",
    "jsonrpsee",
    "ibc-query",
]
