[package]
name 		 = "sov-celestia-client-cw"
authors 	 = { workspace = true }
edition 	 = { workspace = true }
license 	 = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version 	 = { workspace = true }
keywords     = ["sovereign-sdk", "rollup", "ibc", "light-client", "CosmWasm"]
readme       = "./../../README.md"
description  = """
    Contains the CosmWasm contract implementation for the `sov-celesita` light client.
"""

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ibc dependencies
ibc-core   			  = { workspace = true }
ibc-client-cw 		  = { workspace = true }
sov-celestia-client   = { path = "./../", default-features = false, features = ["serde"] }

# cosmwasm dependencies
cosmwasm-schema       = "1.5.2"
cosmwasm-std 	      = "1.5.2"

[dev-dependencies]
cosmwasm-vm           = "1.5.2"
ibc-client-tendermint = { workspace = true }
sov-celestia-client   = { path = "./../", default-features = false, features = ["test-util"] }
tendermint-testgen    = { workspace = true }
test-log              = { version = "0.2.14", default-features = false, features = ["trace"] }
tracing-subscriber    = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[features]
default = ["std"]
std = [
	"ibc-core/std",
	"ibc-client-tendermint/std",
	"sov-celestia-client/std",
]
# use library feature to disable entry points
library = []
