[package]
name         = "sov-celestia-client-types"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
keywords     = ["rollup", "sovereign", "ibc", "light-client"]
readme       = "./../../README.md"
description  = """
    Encapsulates essential `sov-celestia` light client data structures and domain types,
    as specified in the Inter-Blockchain Communication (IBC) protocol. Designed for universal
	applicability to facilitate development and integration across diverse IBC-enabled projects.
"""

[dependencies]
# external dependencies
base64        = { workspace = true, features = ["alloc"] }
bytes         = { workspace = true }
hex           = { version = "0.4.3", optional = true }
derive_more   = { workspace = true }
prost         = { workspace = true }
schemars      = { workspace = true, optional = true }
serde         = { workspace = true, features = ["derive"], optional = true }
typed-builder = { version = "0.18.0", optional = true }

# ibc dependencies
ibc-core              = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-client-wasm-types = { workspace = true, features = ["cosmwasm"], optional = true }
ibc-proto             = { workspace = true }
ics23 	              = { version = "0.11", default-features = false }

# DA layer dependencies
tendermint                       = { workspace = true }
tendermint-proto                 = { workspace = true }
tendermint-light-client-verifier = { workspace = true }

[features]
default = ["std"]
std = [
	"ibc-core/std",
	"ibc-client-tendermint/std",
	"ibc-proto/std",
	"ics23/std",
	"bytes/std",
	"prost/std",
	"serde/std",
	"tendermint/std"
]
serde = [
	"ibc-core/serde",
	"ibc-client-tendermint/serde",
	"ibc-proto/serde",
	"ics23/serde",
	"dep:serde",
]
json-schema = [
	"ibc-core/schema",
	"ibc-client-tendermint/schema",
	"ibc-proto/json-schema",
	"dep:schemars",
]
test-util = [
	"hex",
	"typed-builder",
	"ibc-client-wasm-types"
]
