[package]
name         = "sov-celestia-client-types"
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }
repository   = { workspace = true }
keywords     = ["sovereign-sdk", "rollup", "ibc", "light-client"]
readme       = "./../../README.md"
description  = """
    Encapsulates essential `sov-celestia` light client data structures and domain types,
    as specified in the Inter-Blockchain Communication (IBC) protocol. Designed for universal
	applicability to facilitate development and integration across diverse IBC-enabled projects.
"""

[lints]
workspace = true

[dependencies]
# external dependencies
hex           = { version = "0.4.3", optional = true }
derive_more   = { workspace = true }
prost         = { workspace = true }
schemars      = { workspace = true, optional = true }
serde         = { workspace = true, features = ["derive"], optional = true }
typed-builder = { version = "0.18.0", optional = true }

# ibc dependencies
ibc-core              = { workspace = true }
ibc-client-tendermint = { workspace = true }
ibc-client-wasm-types = { workspace = true, features = ["cosmwasm"], optional = true }
sov-client-types      = { path = "./../../sov-types" }
sov-ibc-proto         = { path = "./../../../proto" }

# DA layer dependencies
tendermint                       = { workspace = true }
tendermint-proto                 = { workspace = true }
tendermint-light-client-verifier = { workspace = true }

[features]
default = ["std"]
std = [
	"ibc-core/std",
	"ibc-client-tendermint/std",
	"sov-ibc-proto/std",
	"prost/std",
	"serde/std",
	"tendermint/std"
]
serde = [
	"ibc-core/serde",
	"ibc-client-tendermint/serde",
	"sov-ibc-proto/serde",
	"dep:serde",
]
json-schema = [
	"ibc-core/schema",
	"ibc-client-tendermint/schema",
	"dep:schemars",
]
test-util = [
	"hex",
	"typed-builder",
	"sov-client-types/test-util",
	"ibc-client-wasm-types"
]
