[package]
name         = "hermes-sovereign-chain-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Context-generic client components for communicating with a Sovereign rollup node
"""

[dependencies]
cgp-core                                = { workspace = true }
cgp-error-eyre                          = { workspace = true }
hermes-runtime                          = { workspace = true }
hermes-relayer-components               = { workspace = true }
hermes-runtime-components               = { workspace = true }
hermes-sovereign-rollup-components      = { workspace = true }
hermes-cosmos-chain-components          = { workspace = true }
hermes-wasm-client-components           = { workspace = true }
hermes-encoding-components              = { workspace = true }
hermes-protobuf-encoding-components     = { workspace = true }

ibc-proto                               = { workspace = true }
ibc-relayer                             = { workspace = true }
ibc-relayer-types                       = { workspace = true }
sov-celestia-client                     = { workspace = true, features = ["test-util"] }
ibc                                     = { workspace = true }
ibc-query                               = { workspace = true }

tokio               = { workspace = true }
eyre                = { workspace = true }
jsonrpsee           = { workspace = true, features = ["http-client"] }
prost               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
bech32              = { workspace = true }
borsh               = { workspace = true }
tonic               = { workspace = true }
ed25519-dalek       = { version = "2.1.1" }
sha2                = { version = "0.10.8" }
hex                 = { version = "0.4.3" }
base64              = { version = "0.22.1" }
serde-json-wasm     = { version = "1.0.1" }