[package]
name = "hermes-sovereign-integration-tests"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"
description = """
    Concrete integration test cases for testing Sovereign to Cosmos relaying
"""

[dependencies]
cgp-core                           = { workspace = true }
hermes-runtime-components          = { workspace = true }
hermes-runtime                     = { workspace = true }
hermes-relayer-components          = { workspace = true }
hermes-test-components             = { workspace = true }
hermes-cosmos-chain-components     = { workspace = true }
hermes-cosmos-relayer              = { workspace = true }
hermes-cosmos-test-components      = { workspace = true }
hermes-wasm-test-components        = { workspace = true }
hermes-wasm-client-components      = { workspace = true }
hermes-cosmos-integration-tests    = { workspace = true }
hermes-celestia-test-components    = { workspace = true }
hermes-celestia-integration-tests  = { workspace = true }
hermes-sovereign-test-components   = { workspace = true }
hermes-sovereign-chain-components  = { workspace = true }
hermes-sovereign-rollup-components = { workspace = true }
hermes-sovereign-relayer           = { workspace = true }

ibc-relayer       = { workspace = true }
ibc-relayer-types = { workspace = true }
ibc-proto         = { workspace = true }
ibc               = { workspace = true }

sov-celestia-client = { workspace = true, features = [ "test-util" ] }

eyre               = { workspace = true }
futures            = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
rand               = { workspace = true }
stable-eyre        = { version = "0.2.2" }
jsonrpsee          = { workspace = true, features = [ "http-client", "ws-client" ] }
borsh              = { workspace = true }
sha2               = { workspace = true }
hex                = { version = "0.4.3" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = [ "env-filter", "json" ] }
