[package]
name         = "hermes-sovereign-test-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Dependencies for running Sovereign integration tests
"""

[dependencies]
cgp-core                            = { workspace = true }
hermes-runtime-components           = { workspace = true }
hermes-runtime                      = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-test-components              = { workspace = true }
hermes-cosmos-test-components       = { workspace = true }
hermes-celestia-test-components     = { workspace = true }
hermes-sovereign-chain-components   = { workspace = true }
hermes-sovereign-rollup-components  = { workspace = true }

ibc                                 = { workspace = true }
ibc-relayer                         = { workspace = true }
ibc-relayer-types                   = { workspace = true }

serde           = { workspace = true }
serde_json      = { workspace = true }
toml            = { workspace = true }
ed25519-dalek   = { version = "2.1.1" }
sha2            = { version = "0.10.8" }
hex             = { version = "0.4.3" }
rand            = { workspace = true }
bech32          = { workspace = true }
jsonrpsee       = { workspace = true, features = ["http-client"] }
